add siweidaotu of deeplearning caputer three

--- a/公式符号.md
+++ b/公式符号.md
@@ -1,6 +1,6 @@
 $$\mathsf{x}_{-s}$$
 
-$$\mathsf{x}_s$$
+$$\mathsf{x}_s​$$
 
 $$\mathtt{A}\in\mathbb{R^{m×n}}​$$
 
@@ -32,7 +32,7 @@ $$\|\mathtt{x}\|_2 = 1​$$
 
 $$\mathtt{A}^{\top}\mathtt{A} = \mathtt{A}\mathtt{A}^{\top} = I​$$
 
-$$\forall{\alpha} \in \mathbb{R}, f(\alpha x) = |\alpha|f(x)$$
+$$\forall{\alpha} \in \mathbb{R}, f(\alpha x) = |\alpha|f(x)​$$
 
 $$f(x) = 0 \to x = 0​$$
 
@@ -54,9 +54,60 @@ $$\mathtt{A} = \mathtt{U}\mathtt{D}\mathtt{V}^{\top}$$
 
 $$\mathtt{A}^+ = \mathtt{V}\mathtt{D}^+\mathtt{U}^\top​$$
 
-$$\mathtt{Ax} = \mathtt{y} \to \mathtt{x} = \mathtt{A}^+\mathtt{y}$$
+$$\mathtt{Ax} = \mathtt{y} \to \mathtt{x} = \mathtt{A}^+\mathtt{y}​$$
 
 $$\|\mathtt{A}\|_F = \sqrt{Tr(AA^\top)}​$$
 
-$$Tr(\prod_{i=1}^{n}F^{(i)}) = Tr(F^{(n)}\prod_{i=1}^{n-1}F^{(i)})$$
+$$Tr(\prod_{i=1}^{n}F^{(i)}) = Tr(F^{(n)}\prod_{i=1}^{n-1}F^{(i)})​$$
 
+$$\forall{x \in \mathbb{x}, 0 \le P(x) \le 1} ​$$
+
+$$ \sum_{x \in \mathbb{x} }{p(x)} = 1 $$
+
+$$ P(\mathbb{x} = x_i) = 1/k ​$$
+
+$$ P(\mathbb{x} = x, \mathbb{y} = y) ​$$
+
+$$ \forall{x \in \mathbb{x}, p(x) \ge 0}​$$
+
+$$ \int{p(x)dx} = 1​$$
+
+$$ u(x;a,b) = \frac {1}{b-a}​$$
+
+$$ \forall{x \in \mathbb{x},} P(\mathbb{x} = x)  = \sum_y{P(\mathbb{x}=x, \mathbb{y} = y)}​$$
+
+$$ p(x) = \int p(x, y)dy ​$$
+
+$$ P({\mathbb{y}=y} | {\mathbb{x} = x}) = \frac{P({\mathbb{y}=y} , {\mathbb{x} = x}) }{P( {\mathbb{x} = x}) }​$$
+
+$$ \mathbb{E}[f(x)] = \sum_{x}P(x)f(x) ​$$
+
+$$ Var(f(x)) = \mathbb{E}[(f(x) - \mathbb{E}[f(x)])^2] ​$$
+
+$$ Cov(f(x), g(y)) = \mathbb{E}[(f(x) - \mathbb{E}[f(x)])(g(y) - \mathbb{E}[g(y)])]​$$
+
+$$ Cov(\mathtt{x})_{i,j} = Conv(\mathtt{x_i}, \mathtt{x_j})  ​$$
+
+$$ \mathcal{N}(x; \mu , \sigma^2) = \sqrt{\frac{1}{2\pi\sigma^2}exp(-\frac{1}{2\sigma^2}(x-\mu)^2)} ​$$
+
+$$ p(x; \lambda) = \lambda \mathtt{1}_{x \ge0}exp(-\lambda x)​$$
+
+$$ Laplace(x; \mu, \gamma) = \frac{1}{2 \gamma} exp(-\frac{|x-\mu|}{\gamma}) ​$$
+
+$$ p(x) = \delta(x - \mu)​$$
+
+$$ \hat{p}(x) = \frac{1}{m}\sum_{i=1}^{m}\delta(x - x^{(i)}) \,​$$
+
+$$ \sigma​$$ 函数性质 $$ \begin{cases} \sigma(x) = \frac{1}{1 + e^{(-x)}} \\\sigma(x)’ = \sigma(x)(1 - \sigma(x))  \\ 1 - \sigma(x) = \sigma(-x) \\\log{\sigma(x)} = -\zeta{(-x)} \\\zeta{(x)}’  = \sigma(x) \\\zeta{(x)} = \log{(1 + \exp(x))} \\ \zeta{(x)} - \zeta{(-x)} = x  \end{cases} ​$$
+
+贝叶斯公式：$$ \begin{cases}  P(x|y) = \frac{P(y|x)P(x)}{P(y)} \\ P(y) = \sum_x{P(y|x)P(x)} \end{cases}  ​$$
+
+自信息 : $$ I(x)  = -\log(P(x)) ​$$
+
+香农熵 : $$ H(x) = \mathbb{E}_{x \sim P}[I(x)] = - \mathbb{E}_{x \sim P}[\log{P(x)}] ​$$
+
+KL散度 : $$ D_{KL}(P||Q) = \mathbb{E}_{x \sim P}[\log \frac{P(x)}{Q(x)}]​$$
+
+有向图概率分布 ：$$ p(x) = \prod_{i}p(x_i|Pa(x_i)) $$
+
+无向图概率分布 :  $$ p(x) = \frac{1}{Z} \prod_{i}{\phi^{(i)}(\mathcal{C}^{(i)})} $$
