DeepLearnging capture four

--- a/公式符号.md
+++ b/公式符号.md
@@ -50,7 +50,7 @@ $$\mathtt{A} = \mathtt{V}diag(\lambda)\mathtt{V}^{-1}​$$
 
 $$\mathtt{A} = \mathtt{Q}diag(\lambda)\mathtt{Q}^{\top}​$$
 
-$$\mathtt{A} = \mathtt{U}\mathtt{D}\mathtt{V}^{\top}$$
+$$\mathtt{A} = \mathtt{U}\mathtt{D}\mathtt{V}^{\top}​$$
 
 $$\mathtt{A}^+ = \mathtt{V}\mathtt{D}^+\mathtt{U}^\top​$$
 
@@ -108,6 +108,24 @@ $$ \sigma​$$ 函数性质 $$ \begin{cases} \sigma(x) = \frac{1}{1 + e^{(-x)}} 
 
 KL散度 : $$ D_{KL}(P||Q) = \mathbb{E}_{x \sim P}[\log \frac{P(x)}{Q(x)}]​$$
 
-有向图概率分布 ：$$ p(x) = \prod_{i}p(x_i|Pa(x_i)) $$
+有向图概率分布 ：$$ p(x) = \prod_{i}p(x_i|Pa(x_i)) ​$$
 
-无向图概率分布 :  $$ p(x) = \frac{1}{Z} \prod_{i}{\phi^{(i)}(\mathcal{C}^{(i)})} $$
+无向图概率分布 :  $$ p(x) = \frac{1}{Z} \prod_{i}{\phi^{(i)}(\mathcal{C}^{(i)})} ​$$
+
+Softmax ： $$ softmax(\boldsymbol{x})_i =  \frac{\exp(x_i)}{\sum_{j=1}^{n}\exp{x_j}}​$$
+
+解决softmax上、下溢问题 : $$ \boldsymbol{z} = \boldsymbol{x} - \max_i{x_i} ​$$
+
+数值计算： $$ \lim_{\epsilon \rightarrow 0 } {f(x - \epsilon sign{f'(x)})} < f(x)​$$
+
+最速下降法 ：$$ argmin_{\boldsymbol{u}}f'(\boldsymbol{x} + \alpha\boldsymbol{u}) ​$$
+
+$$ \boldsymbol{x}' =\boldsymbol{x} - \epsilon \nabla_x f(\boldsymbol{x}) ​$$
+
+$$ \lim_{\epsilon \rightarrow 0 } {f(\boldsymbol{x}')} < f(\boldsymbol{x})$$
+
+Jacobian矩阵：$$ J_{i,j} = \frac{\partial}{\partial x_j} f(\boldsymbol{x})_i​$$
+
+Hessian矩阵 :  $$ H(f)(\boldsymbol{x})_{x,j} = \frac{\partial ^2}{\partial x_i \partial x_j}f(\boldsymbol{x}) ​$$
+
+$$ \epsilon^* = \frac{g^\top g}{g^\top Hg} $$
